--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styl.css">
 </head>
 <body>
-    <h2>Hello</h2>
+    <h2>HelloGitHup</h2>
     <script></script>
 </body>
 </html>
